unpackaged/main/default/objects/Product2/fields/Price_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Price_Valid_To__c</fullName>
    <label>Price Valid To</label>
    <type>Date</type>
</CustomField>