unpackaged/main/default/objects/Product2/fields/Price_Validate_From__c.field-meta.xml
<CustomField>
    <fullName>Price_Validate_From__c</fullName>
    <label>Price Validate From</label>
    <type>Date</type>
</CustomField>