unpackaged/main/default/objects/Product2/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>